syntax = "proto3";

package connect;

option go_package = "github.com/vbalain/go-tpm-tools/launcher/mytools/communication/proto/connect";

// Interface exported by the server.
service InsecureConnect {
  rpc ExchangePublicKeys(ExchangeRequest) returns (ExchangeResponse) {}
}

// Interface exported by the server.
service SecureConnect {
  rpc GetPSK(PskRequest) returns (PskResponse) {}
}

message PskRequest {
}

message PskResponse {
  optional string key = 1;
  optional bool success = 2;
}

message ExchangeRequest {
  optional string key = 1;
  optional string instance_id = 2;
}

message ExchangeResponse {
  optional string key = 1;
  optional bool success = 2;
}